--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "@nuxt/kit": "^3.6.5"
   },
   "devDependencies": {
-    "@types/node": "^18.17.3",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.4.0",
     "@nuxt/schema": "^3.6.5",
     "@nuxt/test-utils": "^3.6.5",
+    "@types/node": "^18.17.3",
     "changelogen": "^0.5.4",
     "eslint": "^8.46.0",
     "nuxt": "^3.6.5",
     "vitest": "^0.34.1"
+  },
+  "optionalDependencies": {
+    "@nuxtjs/i18n": "^7.3.1"
   }
 }
