--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-content-routes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Automatically generate routes from your Nuxt Content files and directories. Respects i18n prefix strategy.",
   "repository": "palmbeach/nuxt-content-routes",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@nuxt/content": "^2.7.2",
     "@nuxt/kit": "^3.6.5"
   },
   "devDependencies": {
@@ -43,6 +44,6 @@
     "vitest": "^0.34.1"
   },
   "optionalDependencies": {
-    "@nuxtjs/i18n": "^7.3.1"
+    "@nuxtjs/i18n": "^8.0.0-rc.3"
   }
 }
