--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "my-module-playground",
+  "name": "nuxt-content-routes-playground",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev",
@@ -8,6 +8,8 @@
     "generate": "nuxi generate"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.2",
+    "@nuxtjs/i18n": "^8.0.0-rc.3",
     "nuxt": "latest"
   }
 }
