--- a/playground/package.json
+++ b/playground/package.json
@@ -10,6 +10,6 @@
   "devDependencies": {
     "@nuxt/content": "^2.7.2",
     "@nuxtjs/i18n": "^8.0.0-rc.3",
-    "nuxt": "latest"
+    "nuxt": "^3.10.3"
   }
 }
