--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/content": "^2.7.2",
-    "@nuxt/kit": "^3.6.5"
+    "@nuxt/content": "^2.12.0",
+    "@nuxt/kit": "^3.10.3"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.1.1",
-    "@nuxt/module-builder": "^0.4.0",
-    "@nuxt/schema": "^3.6.5",
-    "@nuxt/test-utils": "^3.6.5",
-    "@types/node": "^18.17.3",
-    "changelogen": "^0.5.4",
-    "eslint": "^8.46.0",
-    "nuxt": "^3.6.5",
-    "vitest": "^0.34.1"
+    "@nuxt/devtools": "1.0.8",
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/module-builder": "^0.5.5",
+    "@nuxt/schema": "^3.10.3",
+    "@nuxt/test-utils": "^3.11.0",
+    "@types/node": "^20.11.24",
+    "changelogen": "^0.5.5",
+    "eslint": "^8.57.0",
+    "nuxt": "^3.10.3",
+    "vitest": "^1.3.1"
   },
   "optionalDependencies": {
-    "@nuxtjs/i18n": "^8.0.0-rc.3"
+    "@nuxtjs/i18n": "^8.1.1"
   }
 }
