--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.2",
-    "@nuxt/kit": "^3.7.4"
+    "@nuxt/content": "^2.12.0",
+    "@nuxt/kit": "^3.10.3"
   },
   "devDependencies": {
-    "@nuxt/devtools": "0.8.5",
+    "@nuxt/devtools": "1.0.8",
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.1",
-    "@nuxt/schema": "^3.7.4",
-    "@nuxt/test-utils": "^3.7.4",
-    "@types/node": "^20.7.0",
+    "@nuxt/module-builder": "^0.5.5",
+    "@nuxt/schema": "^3.10.3",
+    "@nuxt/test-utils": "^3.11.0",
+    "@types/node": "^20.11.24",
     "changelogen": "^0.5.5",
-    "eslint": "^8.50.0",
-    "nuxt": "^3.7.4",
-    "vitest": "^0.34.5"
+    "eslint": "^8.57.0",
+    "nuxt": "^3.10.3",
+    "vitest": "^1.3.1"
   },
   "optionalDependencies": {
-    "@nuxtjs/i18n": "^8.0.0-rc.4"
+    "@nuxtjs/i18n": "^8.1.1"
   }
 }
